[project]
name = "cubelake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "ingestion-apple-rss",
    "ingestion-apple-itunes",
    "appstore-dags",
    "appstore-core",
    "appstore-transform",
]
